--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>শব্দ কুইজ + অ্যাডমিন</title>
+<title>Word Finder</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <style>
 body { font-family: "Noto Sans Bengali", sans-serif; background: #f8f9fa; }
@@ -107,10 +107,166 @@ textarea { font-family: monospace; }
 // ---------------- ডিফল্ট ডেটা -----------------
 const defaultData = {
   words: [
-    // এখানে JSON বসাতে হবে
+    {"text":"চন্দ্র","type":"তৎসম"},
+{"text":"সূর্য","type":"তৎসম"},
+{"text":"নক্ষত্র","type":"তৎসম"},
+{"text":"ভবন","type":"তৎসম"},
+{"text":"ধর্ম","type":"তৎসম"},
+{"text":"পাত্র","type":"তৎসম"},
+{"text":"মনুষ্য","type":"তৎসম"},
+{"text":"হস্ত","type":"তৎসম"},
+{"text":"হাত","type":"তদ্ভব"},
+{"text":"চর্মকার","type":"তৎসম"},
+{"text":"চামার","type":"তদ্ভব"},
+{"text":"জ্যোছনা","type":"অর্ধ-তৎসম"},
+{"text":"ছেরাদ্দ","type":"অর্ধ-তৎসম"},
+{"text":"গিন্নী","type":"অর্ধ-তৎসম"},
+{"text":"বোষ্টম","type":"অর্ধ-তৎসম"},
+{"text":"কুচ্ছিত","type":"অর্ধ-তৎসম"},
+{"text":"জ্যোৎস্না","type":"তৎসম"},
+{"text":"শ্রাদ্ধ","type":"তৎসম"},
+{"text":"গৃহিণী","type":"তৎসম"},
+{"text":"বৈষ্ণব","type":"তৎসম"},
+{"text":"কুৎসিত","type":"তৎসম"},
+{"text":"কুলা","type":"দেশি"},
+{"text":"গঞ্জ","type":"দেশি"},
+{"text":"চোঙ্গা","type":"দেশি"},
+{"text":"টোপর","type":"দেশি"},
+{"text":"ডাব","type":"দেশি"},
+{"text":"ডাগর","type":"দেশি"},
+{"text":"ঢেঁকি","type":"দেশি"},
+{"text":"তণ্ডুল","type":"তৎসম"},
+{"text":"চাণক্য","type":"তৎসম"},
+{"text":"মাণিক্য","type":"তৎসম"},
+{"text":"ঋণ","type":"তৎসম"},
+{"text":"তৃণ","type":"তৎসম"},
+{"text":"মানুষ","type":"তৎসম"},
+{"text":"পাষাণ","type":"তৎসম"},
+{"text":"দুঃখ","type":"তৎসম"},
+{"text":"নদী","type":"তৎসম"},
+{"text":"চিহ্ন","type":"তৎসম"},
+{"text":"অপরাহ্ণ","type":"তৎসম"},
+{"text":"বধূ","type":"তৎসম"},
+{"text":"চক্ষু","type":"তৎসম"},
+{"text":"বক্ষ","type":"তৎসম"},
+{"text":"শিক্ষা","type":"তৎসম"},
+{"text":"যক্ষ্মা","type":"তৎসম"},
+{"text":"তীক্ষ্ণ","type":"তৎসম"},
+{"text":"প্রভাব","type":"তৎসম"},
+{"text":"পরাজয়","type":"তৎসম"},
+{"text":"অপমান","type":"তৎসম"},
+{"text":"সমৃদ্ধ","type":"তৎসম"},
+{"text":"দুঃস্থ","type":"তৎসম"},
+{"text":"মনঃকষ্ট","type":"তৎসম"},
+{"text":"শিরঃপীড়া","type":"তৎসম"},
+{"text":"কারক","type":"তৎসম"},
+{"text":"শ্রবণ","type":"তৎসম"},
+{"text":"সাহিত্যিক","type":"তৎসম"},
+{"text":"হৈমন্তিক","type":"তৎসম"},
+{"text":"পত্র","type":"তৎসম"},
+{"text":"সোনা","type":"অর্ধ-তৎসম"},
+{"text":"বিষ্টি","type":"অর্ধ-তৎসম"},
+{"text":"সুরুজ","type":"অর্ধ-তৎসম"},
+{"text":"নেমন্তন্ন","type":"অর্ধ-তৎসম"},
+{"text":"পরান","type":"অর্ধ-তৎসম"},
+{"text":"ঝরনা","type":"অর্ধ-তৎসম"},
+{"text":"তারা","type":"অর্ধ-তৎসম"},
+{"text":"জারুল","type":"দেশি"},
+{"text":"ঢোল","type":"দেশি"},
+{"text":"ডোলা","type":"দেশি"},
+{"text":"জলপাই","type":"দেশি"},
+{"text":"পেট (উদর)","type":"দেশি (তামিল)"},
+{"text":"চুলা (উনুন)","type":"দেশি (মুণ্ডারি)"},
+{"text":"কুড়ি (বিশ)","type":"দেশি (কোল)"},
+{"text":"ডিঙ্গি","type":"দেশি"},
+{"text":"ডাল","type":"দেশি"},
+{"text":"চাল","type":"দেশি"}
   ],
   originWords: [
-    // এখানে JSON বসাতে হবে
+    {"text":"কানুন","language":"আরবি"},
+{"text":"কলম","language":"আরবি"},
+{"text":"কিতাব","language":"আরবি"},
+{"text":"কেচ্ছা","language":"আরবি"},
+{"text":"নগদ","language":"আরবি"},
+{"text":"বাকি","language":"আরবি"},
+{"text":"মহকুমা","language":"আরবি"},
+{"text":"মুন্সেফ","language":"আরবি"},
+{"text":"মোক্তার","language":"আরবি"},
+{"text":"খোদা","language":"ফারসি"},
+{"text":"গুনাহ","language":"ফারসি"},
+{"text":"নামাজ","language":"ফারসি"},
+{"text":"পয়গম্বর","language":"ফারসি"},
+{"text":"ফেরেশতা","language":"ফারসি"},
+{"text":"বেহেশত","language":"ফারসি"},
+{"text":"রোজা","language":"ফারসি"},
+{"text":"কারখানা","language":"ফারসি"},
+{"text":"চশমা","language":"ফারসি"},
+{"text":"জবানবন্দি","language":"ফারসি"},
+{"text":"তারিখ","language":"ফারসি"},
+{"text":"তোশক","language":"ফারসি"},
+{"text":"দফতর","language":"ফারসি"},
+{"text":"দোকান","language":"ফারসি"},
+{"text":"দস্তখত","language":"ফারসি"},
+{"text":"দৌলত","language":"ফারসি"},
+{"text":"বাদশাহ","language":"ফারসি"},
+{"text":"বেগম","language":"ফারসি"},
+{"text":"মেথর","language":"ফারসি"},
+{"text":"আদমি","language":"ফারসি"},
+{"text":"আমদানি","language":"ফারসি"},
+{"text":"জানোয়ার","language":"ফারসি"},
+{"text":"জিন্দা","language":"ফারসি"},
+{"text":"নমুনা","language":"ফারসি"},
+{"text":"বদমাশ","language":"ফারসি"},
+{"text":"রফতানি","language":"ফারসি"},
+{"text":"হাঙ্গামা","language":"ফারসি"},
+{"text":"ইউনিভার্সিটি","language":"ইংরেজি"},
+{"text":"ইউনিয়ন","language":"ইংরেজি"},
+{"text":"কলেজ","language":"ইংরেজি"},
+{"text":"টিন","language":"ইংরেজি"},
+{"text":"নভেল","language":"ইংরেজি"},
+{"text":"নোট","language":"ইংরেজি"},
+{"text":"পাউডার","language":"ইংরেজি"},
+{"text":"পেন্সিল","language":"ইংরেজি"},
+{"text":"ব্যাগ","language":"ইংরেজি"},
+{"text":"ফুটবল","language":"ইংরেজি"},
+{"text":"মাস্টার","language":"ইংরেজি"},
+{"text":"লাইব্রেরি","language":"ইংরেজি"},
+{"text":"স্কুল","language":"ইংরেজি"},
+{"text":"আফিম","language":"ইংরেজি"},
+{"text":"অফিস","language":"ইংরেজি"},
+{"text":"ইস্কুল","language":"ইংরেজি"},
+{"text":"বাক্স","language":"ইংরেজি"},
+{"text":"হাসপাতাল","language":"ইংরেজি"},
+{"text":"বোতল","language":"ইংরেজি"},
+{"text":"আনারস","language":"পর্তুগিজ"},
+{"text":"আলপিন","language":"পর্তুগিজ"},
+{"text":"আলমারি","language":"পর্তুগিজ"},
+{"text":"গির্জা","language":"পর্তুগিজ"},
+{"text":"গুদাম","language":"পর্তুগিজ"},
+{"text":"চাবি","language":"পর্তুগিজ"},
+{"text":"পাউরুটি","language":"পর্তুগিজ"},
+{"text":"পাদ্রি","language":"পর্তুগিজ"},
+{"text":"বালতি","language":"পর্তুগিজ"},
+{"text":"কার্তুজ","language":"ফরাসি"},
+{"text":"কুপন","language":"ফরাসি"},
+{"text":"ডিপো","language":"ফরাসি"},
+{"text":"রেস্তোরাঁ","language":"ফরাসি"},
+{"text":"ইস্কাপন","language":"ওলন্দাজ"},
+{"text":"টেক্কা","language":"ওলন্দাজ"},
+{"text":"তুরূপ","language":"ওলন্দাজ"},
+{"text":"রুইতন","language":"ওলন্দাজ"},
+{"text":"হরতন","language":"ওলন্দাজ"},
+{"text":"খন্দর","language":"গুজরাটি"},
+{"text":"হরতাল","language":"গুজরাটি"},
+{"text":"চাহিদা","language":"পাঞ্জাবি"},
+{"text":"শিখ","language":"পাঞ্জাবি"},
+{"text":"চাকর","language":"তুর্কি"},
+{"text":"চাকু","language":"তুর্কি"},
+{"text":"তোপ","language":"তুর্কি"},
+{"text":"দারোগা","language":"তুর্কি"},
+{"text":"রিক্সা","language":"জাপানি"},
+{"text":"হারিকিরি","language":"জাপানি"},
+{"text":"জামদানি","language":"ফারসি"}
   ]
 };
 
